[package]
name = "monster-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
poise = "0.6.1"
reqwest = "0.12.23"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
