[package]
name = "ben"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
dotenv = "0.15.0"
poise = "0.6.1"
rand = "0.9.2"
reqwest = { version = "0.12.23",  features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
